# fs-crawler

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BranchNotes.md  MANIFEST.in  MIGRATION.md  README.md  README_MIGRATION.txt  implementation.notes.md  migrate_csv_to_db.py  pyproject.toml  setup.cfg  setup.cfg.deprecated  setup.py  setup.py.deprecated
.plans/: additional-claude.md  additional-codex.md  additional-opus.md  comparative_analysis_prompt.md  hop_implementation_summary.md  judgement-claude.md  judgement-codex.md  judgement-opus.md  prompt.md  refactor-claude.md  refactor.md  support_hop_count.md
docs/: INDEX_OPTIMIZATION.md  baseline.md  operations.md
examples/: README.md  demo_hop_filtering.py  demo_status_updates.py
fs_rgb_crawler/: _version.py  crawler.py
fs_rgb_crawler/controller/: __init__.py  fsapi.py
fs_rgb_crawler/model/: individual.py  name.py
fscrawler/: __init__.py  _version.py  crawler.py  validator.py
fscrawler/controller/: __init__.py  fsapi.py  graph_io.py  graph_reader.py  graph_validator.py  graph_validator_reader.py  graph_writer.py  relationship_rewriter.py  session.py
fscrawler/model/: __init__.py  cp_validator.py  graph.py  graph_db_impl.py  graph_memory_impl.py  individual.py  name.py  relationship_types.py
fscrawler/util/: __init__.py  abstract_graph.py  db_reader.py  telemetry.py
tests/: test_migration.py
tests/controller/: test_fsapi.py
tests/controller/data/: biological_parent_relationship.json  persons.json  step_parent_relationship.json
tests/integration/: test_crawl_resume.py  test_pause_control.py
tests/model/: test_graph.py  test_graph_db_impl.py
tests/util/: test_db_reader.py  test_hop_filtering.py  test_telemetry.py
tools/: offline_baseline.py
