[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fs-crawler"
version = "1.0.0"
description = "FamilySearch Crawler - extracts files for RedBlackGraph ingestion"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Daniel Rapp", email = "rappdw@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "httpx",
    "keyring",
    "tqdm",
    "iteration_utilities",
]

[project.optional-dependencies]
dev = [
    "wheel>=0.29",
    "ruff",
    "mypy",
    "pre-commit",
]
test = [
    "asynctest>=0.13",
    "pytest>=6.2",
    "pytest-asyncio>=0.12",
    "pytest-cov>=2.10",
    "pytest-httpx>=0.8",
]

[project.scripts]
crawl-fs = "fscrawler.crawler:main"
validate-fs = "fscrawler.validator:main"

[project.urls]
Homepage = "https://github.com/rappdw/fs-crawler"
Repository = "https://github.com/rappdw/fs-crawler"

# Hatchling configuration
[tool.hatch.build.targets.wheel]
packages = ["fscrawler"]

# Ruff configuration
[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.isort]
known-first-party = ["fscrawler"]

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "iteration_utilities.*",
    "asynctest.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=fscrawler",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["fscrawler"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/_version.py",
    "*/versioneer.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
